# VSSReferee

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker_run
.github/workflows/: build.yml  build_.yml  clang-tidy-all.yml  cpp-llinter.yml
src/: refereecore.cpp  refereecore.h
src/constants/: constants.cpp  constants.h
src/recorder/: recorder.cpp  recorder.h
src/soccerview/: soccerview.cpp  soccerview.h
src/soccerview/fieldview/: fieldview.cpp  fieldview.h
src/soccerview/fieldview/gltext/: gltext.cpp  gltext.h
src/utils/: utils.cpp  utils.h
src/utils/exithandler/: exithandler.cpp  exithandler.h
src/utils/text/: text.cpp  text.h
src/utils/timer/: simulationtime.cpp  simulationtime.h  timer.cpp  timer.h
src/utils/types/angle/: angle.cpp  angle.h
src/utils/types/field/: field.cpp  field.h  field_default_3v3.h  field_default_5v5.h
src/utils/types/messagetype/: messagetype.h
src/utils/types/object/: object.cpp  object.h
src/utils/types/placedata/: placedata.cpp  placedata.h
src/utils/types/position/: position.cpp  position.h
src/utils/types/velocity/: velocity.cpp  velocity.h
src/world/: world.cpp  world.h
src/world/entities/: entity.cpp  entity.h
src/world/entities/referee/: referee.cpp  referee.h
src/world/entities/referee/checkers/: checker.cpp  checker.h  checkers.h
src/world/entities/referee/checkers/ballplay/: checker_ballplay.cpp  checker_ballplay.h
src/world/entities/referee/checkers/goalie/: checker_goalie.cpp  checker_goalie.h
src/world/entities/referee/checkers/halftime/: checker_halftime.cpp  checker_halftime.h
src/world/entities/referee/checkers/stoppedball/: checker_stuckedball.cpp  checker_stuckedball.h
src/world/entities/referee/checkers/twoattackers/: checker_twoattackers.cpp  checker_twoattackers.h
src/world/entities/referee/checkers/twodefenders/: checker_twodefenders.cpp  checker_twodefenders.h
src/world/entities/replacer/: replacer.cpp  replacer.h
src/world/entities/vision/: vision.cpp  vision.h
src/world/entities/vision/filters/kalman/: kalmanfilter.cpp  kalmanfilter.h
src/world/entities/vision/filters/kalman/matrix/: matrix.cpp  matrix.h
src/world/entities/vision/filters/kalman/state/: kalmanstate.cpp  kalmanstate.h
src/world/entities/vision/filters/loss/: lossfilter.cpp  lossfilter.h
src/world/entities/vision/filters/noise/: noisefilter.cpp  noisefilter.h
